兼容0.1.12版本